[package]
name = "phantom-limb"
authors = ["j-stach"]
description = "Sense and motor signal handlers for integrating with Cajal"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/j-stach/phantom-limb"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["cajal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
chrono = "0.4.38"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["net", "rt", "rt-multi-thread", "sync", "macros", "time"] }

# cajal = { path = "../cajal" }
log = "0.4.21"
thiserror = "1.0.59"
serde = { version = "1.0.199", features = ["derive"] }
regex = "1.10.4"
env_logger = "0.11.3"
