[package]
name = "phantom_limb"
authors = ["j-stach"]
description = "Sense and motor signal handlers for interfacing with Cajal"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/j-stach/phantom-limb"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["cajal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
tokio = { version = "1.37.0", features = ["net", "rt", "rt-multi-thread", "sync", "macros", "time"] }

cajal = { path = "/home/jordan/projs/cajal" }
thiserror = "1.0.59"
serde = { version = "1.0.199", features = ["derive"] }
regex = "1.10.4"

