[package]
name = "phantom_limb"
authors = ["j-stach"]
description = "Sensor and motor interfaces for Cajal"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/j-stach/phantom-limb"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["cajal"]


[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
tokio = { version = "1.37.0", features = ["net", "rt", "rt-multi-thread", "sync", "macros", "time"] }

cajal = { path = "/home/jordan/projs/cajal" }
thiserror = "1.0.59"
serde = { version = "1.0.199", features = ["derive"] }
regex = "1.10.4"

